# Students-AI-Assistance

./: README.md  api.py  main.py  pyproject.toml  requirements.txt
sources/: exception.py  logger.py  utils.py
sources/Agents/: analytics_agent.py  assessment_agent.py  gap_agent.py  intent_agent.py  planner_agent.py  quiz_agent.py  tutor_agent.py
sources/Model/: model.py
sources/workflow/: agents_workflow.py
